# exercises

./: .gitignore  CMakeLists.txt  permutation.cc
MyCodes/: common.h  mm.c
effective_modern_c++/: CMakeLists.txt  test1.cc
